Signout option invisibility on refresh resolved

--- a/src/app/folders-panel/folders-panel.component.css
+++ b/src/app/folders-panel/folders-panel.component.css
@@ -14,7 +14,6 @@
 /* The navigation menu links */
  .sidenav a {
     display: block;
-    color: #f2f2f2;
     text-align: left;
     padding: 14px 16px;
     font-size: 17px;
@@ -23,9 +22,10 @@
 
 
 .sidenav a:active{
-    border-bottom: 3px solid red;
-    border-top: 3px solid red;
+    border-bottom: 5px solid red;
+    border-top: 5px solid red;
     text-decoration:underline;
+    color: red;
 }
 
 .sidenav button{
